[metadata]
name = corpus
version = 0.1
long_description = file: README.md
author = Emanuel Caricato
author_email = emanuel.caricato@dlr.long_description

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    Click
    python-gitlab
    sphinx
    pyyaml

[options.packages.find]
where = src