[metadata]
name = corpus
version = 0.1
long_description = file: README.md
author = Emanuel Caricato
author_email = emanuel.caricato@dlr.long_description

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    Click
    python-gitlab
    sphinx
    pyyaml
    sphinx-click

[options.packages.find]
where = src

[flake8]
exclude = .git,out,docs,examples,venv,resources,.pytest_cache
max-line-length = 120